<resources>
    <string name="app_name">WhatDidILearn</string>
    <string name="save">Save</string>
    <string name="level_label">Understanding Level:</string>
    <string name="description_label">Item Description:</string>
    <string name="title_label">Item Title:</string>
    <string name="low_level">Low</string>
    <string name="medium_level">Medium</string>
    <string name="high_level">High</string>
    <string name="hint_description">Item Description</string>
    <string name="hint_title">Title Item</string>
</resources>